src/objects/Royalty_Line_Item__c.object
<CustomObject>
    <description>Royalty check line items</description>
    <fields>
        <fullName>adjustmentCode__c</fullName>
        <label>Adjustment Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>detailId__c</fullName>
        <externalId>true</externalId>
        <label>DetailId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>grossAdjustmentsActual__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Gross Adjustments Actual</label>
        <precision>17</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>grossNetActual__c</fullName>
        <label>Gross Net Actual</label>
        <precision>17</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>grossTaxesActual__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Gross Taxes Actual</label>
        <precision>17</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>grossValueActual__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Gross Value Actual</label>
        <precision>17</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>grossValueAfterAdjustments__c</fullName>
        <description>Gross Value - Gross Adjustments - Gross Taxes</description>
        <formula>grossValue__c -  ABS(grossTaxesActual__c)  -  ABS(grossAdjustmentsActual__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Gross Value - Gross Adjustments - Gross Taxes</inlineHelpText>
        <label>Gross Value after Adjustments</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>grossValue__c</fullName>
        <description>Gross Value x Price</description>
        <formula>grossVolumeActual__c *  price__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Gross Value x Price</inlineHelpText>
        <label>Gross Value Calc</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>grossVolumeActual__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Gross volume from royalty check from operator (5 decimal places)</description>
        <inlineHelpText>Gross volume from royalty check from operator (5 decimal places)</inlineHelpText>
        <label>Gross Volume Actual</label>
        <precision>17</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>interestType__c</fullName>
        <label>Interest Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>isLastProductionMonth__c</fullName>
        <formula>IF(production_Month__c =  well__r.Last_Production_Month__c , true,false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Last Production Month</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isNonWellLineItem__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Non Well Line Item</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>lineItemDecimal__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Royalty check line item well interest / distribution decimal from operator.</description>
        <inlineHelpText>Royalty check line item well interest / distribution decimal from operator.</inlineHelpText>
        <label>Line Item Decimal</label>
        <precision>11</precision>
        <required>true</required>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>line_Item_Net_Val__c</fullName>
        <description>Gross Value After Adjustments x Line Item Decimal</description>
        <formula>ABS(grossValueAfterAdjustments__c) *  lineItemDecimal__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Gross Value After Adjustments x Line Item Decimal</inlineHelpText>
        <label>Line Item Net Value Calc</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>net_Adjustments__c</fullName>
        <description>Gross Adjustments x Decimal</description>
        <formula>grossAdjustmentsActual__c  *  lineItemDecimal__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Gross Adjustments x Decimal</inlineHelpText>
        <label>Net Adjustments</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>net_Taxes__c</fullName>
        <description>Gross Taxes x Line Item Decimal</description>
        <formula>grossTaxesActual__c  *  lineItemDecimal__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Gross Taxes x Line Item Decimal</inlineHelpText>
        <label>Net Taxes</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>net_Value__c</fullName>
        <description>Gross_Value__c * Line_Item_Decimal__c</description>
        <formula>grossValue__c  *  lineItemDecimal__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Gross_Value__c * Line_Item_Decimal__c</inlineHelpText>
        <label>Net Value Calc</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>notes__c</fullName>
        <description>Optional field for additional information related to royalty check line item</description>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>operatorName__c</fullName>
        <formula>royalty_Check__r.Operator_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Operator Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ownerAdjustmentsActual__c</fullName>
        <label>Owner Adjustments Actual</label>
        <precision>17</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ownerNetValueActual__c</fullName>
        <label>Owner Net Value Actual</label>
        <precision>17</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ownerTaxesActual__c</fullName>
        <label>Owner Taxes Actual</label>
        <precision>17</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ownerValueActual__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Value before tax and deductions.  Field on royalty check can be owner value or net value</description>
        <inlineHelpText>Value before tax and deductions.  Field on royalty check can be owner value or net value</inlineHelpText>
        <label>Owner Value Actual</label>
        <precision>9</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ownerVolumeActual__c</fullName>
        <label>Owner Volume Actual</label>
        <precision>17</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>price__c</fullName>
        <defaultValue>0.00</defaultValue>
        <description>Price from operator royalty check line item (4 decimal places)</description>
        <inlineHelpText>Price from operator royalty check line item (4 decimal places)</inlineHelpText>
        <label>Price</label>
        <precision>11</precision>
        <required>true</required>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>productCode__c</fullName>
        <label>Product Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>product_Category__c</fullName>
        <formula>if( NOT(ISBLANK(product__c)),if( BEGINS(product__c, &apos;1&apos;),&apos;OIL&apos;,if( BEGINS(product__c, &apos;2&apos;),&apos;GAS&apos;,if( BEGINS(product__c, &apos;3&apos;),&apos;NGL&apos;,if( UPPER(product__c) == &apos;GAS&apos; || UPPER(product__c) == &apos;PRD&apos; || UPPER(product__c) == &apos;OIL&apos; || UPPER(product__c) == &apos;PPRO&apos; ,UPPER(product__c),if(UPPER(product__c)==&apos;G&apos;,&apos;GAS&apos;, if(UPPER(product__c)==&apos;O&apos;,&apos;OIL&apos;,if(UPPER(product__c)==&apos;N&apos;,&apos;NGL&apos;, &apos;OTHER&apos; ) ) )) ) ) ),&apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>product__c</fullName>
        <description>Product type or product code from royalty check line item (ie. oil, gas, plant product, etc)</description>
        <inlineHelpText>Product type or product code from royalty check line item (ie. oil, gas, plant product, etc)</inlineHelpText>
        <label>Product</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>productionMonthCalc__c</fullName>
        <formula>DATE(YEAR( production_Month__c), MONTH(production_Month__c ), 01)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Production Month (Calc)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>production_Month__c</fullName>
        <label>Production Month</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>propertyName__c</fullName>
        <externalId>true</externalId>
        <label>Property Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>property_Id__c</fullName>
        <label>Property Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>revenueAllocated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Revenue Allocated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>revenueProperty__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Revenue Property</label>
        <referenceTo>revenueProperty__c</referenceTo>
        <relationshipLabel>Royalty Line Items</relationshipLabel>
        <relationshipName>Royalty_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>royalty_Check__c</fullName>
        <description>Royalty Check</description>
        <label>Royalty Check</label>
        <referenceTo>Royalty_Check__c</referenceTo>
        <relationshipLabel>Royalty Line Items</relationshipLabel>
        <relationshipName>Line_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>source__c</fullName>
        <formula>TEXT(royalty_Check__r.Source__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Source</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>totalAllocatedAmount__c</fullName>
        <description>Royalty check line item amount that has been allocated to a well interest revenue record.</description>
        <inlineHelpText>Royalty check line item amount that has been allocated to a well interest revenue record.</inlineHelpText>
        <label>Total Allocated Amount</label>
        <precision>9</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Revenue</fullName>
                </value>
                <value>
                    <fullName>Adjustment</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>wellNames__c</fullName>
        <formula>revenueProperty__r.wells__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Well</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>well__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Well (Discarded)</label>
        <referenceTo>Well__c</referenceTo>
        <relationshipLabel>Royalty Line Items (Well)</relationshipLabel>
        <relationshipName>Royalty_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Royalty Line Item</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>royalty_Check__c</columns>
        <columns>lineItemDecimal__c</columns>
        <columns>type__c</columns>
        <columns>well__c</columns>
        <columns>production_Month__c</columns>
        <columns>ownerNetValueActual__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>LI-{000000000}</displayFormat>
        <label>Line Item Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Royalty Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>